fix: recap page (#32)
* fix: correct spacing between menu & header

* fix: correct sponsors link

* feat: don't indent recap sections

* feat: max width for images to not overlap content area

---------

--- a/style.css
+++ b/style.css
@@ -214,6 +214,13 @@ section#sponsor-coffee {
 section#contact {
   background-image: url('./assets/sections/email-envelope-close.svg');
 }
+section.no-indent {
+  margin-left: 0;
+  padding-left: 0;
+}
+section img {
+  max-width: 100%;
+}
 
 h2 {
   margin: 0 0 1rem;
